--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -1379,7 +1379,7 @@ footer {
 
   td {
     font-size: 14px;
-    padding: 8px 0px 8px 0px;
+    padding: 8px 0px 8px 0px !important;
     vertical-align: inherit;
     color: #4C4C4C;
   }
